# notes-cli

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: config.h  helpers.h  parser.h
src/: main.cpp  parser.cpp
src/config/: config.cpp
src/utils/: helpers.cpp
